--- a/student_resource_hub/src/app/navigation-menu/navigation-menu.component.html
+++ b/student_resource_hub/src/app/navigation-menu/navigation-menu.component.html
@@ -1,1 +1,22 @@
-<p>navigation-menu works!</p>
+<nav>
+  <ul class="nav-menu">
+    <li><a href="#">Home</a></li>
+    
+    <li class="dropdown">
+      <a href="#" class="dropdown-toggle">Categories</a>
+      <ul class="dropdown-menu">
+        <li><a href="#">Programming</a></li>
+        <li><a href="#">Design</a></li>
+        <li><a href="#">Math</a></li>
+      </ul>
+    </li>
+
+    <li><a href="#">About</a></li>
+    <li><a href="#">Add Resource</a></li>
+
+    <!-- Los Pollos Hermanos Logo -->
+    <li class="nav-logo">
+      <img src="https://upload.wikimedia.org/wikipedia/en/a/ae/Los_Pollos_Hermanos_logo.png" alt="Los Pollos Hermanos" />
+    </li>
+  </ul>
+</nav>
