Finished the footer component's layout

--- a/student_resource_hub/src/app/footer/footer.component.html
+++ b/student_resource_hub/src/app/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="footer-content">
+      <p>&copy; <span>{{ currentYear }}</span> - Student Resource Hub</p>
+      <p>Members: <span class="members-placeholder">Jhian Earon C. Cachin & Felvir Shavin U. Bullay</span></p>
+    </div>
+  </footer>
+  
