--- a/student_resource_hub/src/app/app.component.css
+++ b/student_resource_hub/src/app/app.component.css
@@ -1,8 +1,8 @@
 .header-container {
     display: flex;
-    justify-content: space-between; /* Aligns items left and right */
+    justify-content: space-between; 
     align-items: center;
-    background-color: #004080; /* Matches the header background */
+    background-color: #004080; 
     padding: 10px 20px;
   }
   
