Configuring the routes

--- a/student_resource_hub/src/app/app.component.html
+++ b/student_resource_hub/src/app/app.component.html
@@ -1,8 +1,10 @@
 <header class="header-container">
   <app-header></app-header>
   <app-navigation-menu></app-navigation-menu>
+</header>
 
+<body>
 <router-outlet></router-outlet>
+</body>
 
 <app-footer></app-footer>
-
