--- a/student_resource_hub/src/app/navigation-menu/navigation-menu.component.html
+++ b/student_resource_hub/src/app/navigation-menu/navigation-menu.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <ul class="nav-menu">
 
-    <li><a routerLink="/" class="nav-link">Home</a></li>
+    <li><a routerLink="/" routerLinkActive="active">Home</a></li>
     
 
     <li class="dropdown">
@@ -13,11 +13,8 @@
       </ul>
     </li>
     
-
-    <li><a routerLink="/about" class="nav-link">About</a></li>
-    
-
-    <li><a href="#" class="nav-link">Add Resource</a></li>
+    <li><a routerLink="/about">About</a></li>
+    <li><a routerLink="/add-resource">Add Resource</a></li>
     
  
     <li class="nav-logo">
