--- a/student_resource_hub/src/app/resource-form/resource-form.component.html
+++ b/student_resource_hub/src/app/resource-form/resource-form.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit()">
+<!-- <form (ngSubmit)="onSubmit()">
     <label for="title">Title:</label>
     <input type="text" id="title" [(ngModel)]="resource.title" name="title" required />
   
@@ -20,4 +20,4 @@
       <button type="submit">Submit</button>
       <button type="button" (click)="onCancel()">Cancel</button>
     </div>
-  </form>
+  </form> -->
