--- a/student_resource_hub/src/app/navigation-menu/navigation-menu.component.html
+++ b/student_resource_hub/src/app/navigation-menu/navigation-menu.component.html
@@ -1,26 +1,24 @@
 <nav class="navbar">
   <ul class="nav-menu">
-
-    <li><a routerLink="/" routerLinkActive="active">Home</a></li>
-    
+    <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
 
     <li class="dropdown">
-      <a href="#" class="dropdown-toggle">Categories</a>
+      <a href="#" class="dropdown-toggle" (click)="$event.preventDefault()">Categories</a>
       <ul class="dropdown-menu">
-        <li><a href="#">Programming</a></li>
-        <li><a href="#">Design</a></li>
-        <li><a href="#">Math</a></li>
+        <li><a routerLink="/category/programming" routerLinkActive="active">Programming</a></li>
+        <li><a routerLink="/category/design" routerLinkActive="active">Design</a></li>
+        <li><a routerLink="/category/math" routerLinkActive="active">Math</a></li>
       </ul>
     </li>
-    
-    <li><a routerLink="/about">About</a></li>
-    <li><a routerLink="/add-resource">Add Resource</a></li>
-    
- 
+
+    <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+    <li><a routerLink="/add-resource" routerLinkActive="active">Add Resource</a></li>
+
     <li class="nav-logo">
-      <a href="#">
+      <a routerLink="/">
         <img src="https://upload.wikimedia.org/wikipedia/en/a/ae/Los_Pollos_Hermanos_logo.png" alt="Los Pollos Hermanos" />
       </a>
     </li>
   </ul>
 </nav>
+
