Finished the layout and route for add forms

--- a/student_resource_hub/src/app/navigation-menu/navigation-menu.component.html
+++ b/student_resource_hub/src/app/navigation-menu/navigation-menu.component.html
@@ -12,7 +12,7 @@
     </li>
 
     <li><a routerLink="/about" routerLinkActive="active">About</a></li>
-    <li><a routerLink="/add-resource" routerLinkActive="active">Add Resource</a></li>
+    <li><a routerLink="/add-resource" routerLinkActive="active">Add Forms</a></li>
 
     <li class="nav-logo">
       <a routerLink="/">
